--- a/index1.html
+++ b/index1.html
@@ -1,11 +1,11 @@
 <html>
-	
+
 	<head>
 		<title>index1</title>
 		<meta charset="utf-8">
 		<script type="text/javascript" src="jquery-3.2.1.js"></script>
 		<script type="text/javascript" src="mouseover_prefetch.js"></script>
-		
+
 	</head>
 
 	<body>
@@ -14,7 +14,9 @@
 		<a href="./index2.html">index2(pre)</a>
 		<a href="./index3.html">index3</a>
 		<a href="./index4.html">index4(pre)</a>
-		
+		<br/>
+		<br/>
+		<p>ブラウザのConsole開いてマウスオーバーしてみてください</a>
 	</body>
 
 </html>
