変化がわかりやすいように背景色変更

--- a/index2.html
+++ b/index2.html
@@ -1,18 +1,22 @@
 <html>
-	
+
 	<head>
 		<title>index2(pre)</title>
 		<meta charset="utf-8"/>
-	
+		<style>
+			body {
+				background-color: #a66;
+			}
+		</style>
 	</head>
-	
+
 	<body>
-		
+
 		<a href="./index1.html">index1</a>
 		index2(pre)
 		<a href="./index3.html">index3</a>
 		<a href="./index4.html">index4(pre)</a>
-	
+
 	</body>
 
 </html>
