--- a/index3.html
+++ b/index3.html
@@ -1,18 +1,22 @@
 <html>
-	
+
 	<head>
 		<title>index3</title>
 		<meta charset="utf-8"/>
-	
+		<style>
+			body {
+				background-color: #6a6;
+			}
+		</style>
 	</head>
-	
+
 	<body>
-		
+
 		<a href="./index1.html">index1</a>
 		<a href="./index2.html">index2(pre)</a>
 		index3
 		<a href="./index4.html">index4(pre)</a>
-	
+
 	</body>
 
 </html>
