--- a/index4.html
+++ b/index4.html
@@ -1,18 +1,22 @@
 <html>
-	
+
 	<head>
 		<title>index4(pre)</title>
 		<meta charset="utf-8"/>
-	
+		<style>
+			body {
+				background-color: #66a;
+			}
+		</style>
 	</head>
-	
+
 	<body>
-		
+
 		<a href="./index1.html">index1</a>
 		<a href="./index2.html">index2(pre)</a>
 		<a href="./index3.html">index3</a>
 		index4(pre)
-	
+
 	</body>
 
 </html>
